Fix left-right alignment issues

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 #menubutton {
     position: fixed;
     top: 0;
@@ -30,11 +35,17 @@
     background: white;
     
     border-top: solid black 1px;
-    border-radius: 5px 5px 0 0;
     
     position:fixed;
     bottom:0;
     
-    margin: 0 auto 0;
+    padding: -15px 0 0;
+    margin: -15px auto 0;
     width: 100%;
+    
+    max-height: 40px;
+}
+
+#content {
+    margin: 0 8px 50px;
 }
